<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="4dp">



<LinearLayout
    android:id="@+id/llcontent"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:orientation="horizontal"
    android:weightSum="6">

    <ImageView
        android:id="@+id/imgBookImage"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_weight="1.5"
        android:contentDescription="@string/todo"
        android:padding="5dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        tools:ignore="ImageContrastCheck" />

    <RelativeLayout
        android:layout_weight="3.3"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtBookName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_of_the_book"
            android:padding="8dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtBookAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtBookName"
            android:text="@string/name_of_the_author"
            android:padding="8dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/txtBookPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/rs_299"
            android:padding="8dp"
            android:layout_below="@id/txtBookAuthor"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="#357a38" />
    </RelativeLayout>

    <TextView
        android:id="@+id/txtBookRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.2"
        android:drawablePadding="4dp"
        android:padding="4dp"
        android:text="@string/_4_5"
        android:textColor="#ffca28"
        android:textSize="15sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_ratings"
        tools:ignore="TextContrastCheck">

    </TextView>

</LinearLayout>

</androidx.cardview.widget.CardView>
